2012-10-23  Kihong Kwon  <kihong.kwon@samsung.com>

        Unreviewed. Adding myself as committer.

        * Scripts/webkitpy/common/config/committers.py:

2012-10-23  Dan Bernstein  <mitz@apple.com>

        Tools changes for <rdar://problem/2966974> [mac] Kerning and ligatures are not enabled by default
        https://bugs.webkit.org/show_bug.cgi?id=100188

        Reviewed by Sam Weinig.

        Disable kerning and ligatures by default when running the tests.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues): Set a value of NO for the
        WebKitKerningAndLigaturesEnabledByDefault user default.
        * WebKitTestRunner/mac/main.mm:
        (main): Register a value of NO for the WebKitKerningAndLigaturesEnabledByDefault user
        default.

2012-10-23  Simon Fraser  <simon.fraser@apple.com>

        Allow tests to run with a tile cache, and optionally dump the tile cache via layerTreeAsText()
        https://bugs.webkit.org/show_bug.cgi?id=100159

        Reviewed by Tim Horton.

        Make WebKitTestRunner use a WKView with a tile cache for tests run in a directory
        whose path includes "tiled-drawing". It does this by passing around a WKDictionary 
        of options, and if the current PlatformWebView doesn't support those options, it will
        create a new one.

        * WebKitTestRunner/PlatformWebView.h:
        (PlatformWebView): Add a WKDictionaryRef options dictionary argument.
        (WTR::PlatformWebView::viewSupportsOptions): Returns true if the view
        supports the options in the WKDictionaryRef.
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::initialize): Call createWebViewWithOptions() with
        no options in the normal case.
        (WTR::TestController::createWebViewWithOptions): Moved code into this fuction
        so we can call it in two places.
        (WTR::TestController::ensureViewSupportsOptions): If the current view