@@ -1,3 +1,15 @@
+2012-10-23  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] TestWebKitAPI/TestWebKit2 and TestWebKitAPI/TestGtk link to the installed libs
+        https://bugs.webkit.org/show_bug.cgi?id=100134
+
+        Reviewed by Martin Robinson.
+
+        Do not share the LDADD variable among TestWTF, TestWebKit2 and
+        TestGtk.
+
+        * TestWebKitAPI/GNUmakefile.am:
+
 2012-10-23  Kihong Kwon  <kihong.kwon@samsung.com>
 
         Unreviewed. Adding myself as committer.
